# Islume

./: .env.example  .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  docker-compose.yml  pyproject.toml
agents/00000001-0000-0000-0000-000000000000/: coffee_connoisseur.md  jazz_lover.md  piano_teacher.md
agents/00000002-0000-0000-0000-000000000000/: craft_beer_nerd.md  road_cyclist.md  vinyl_collector.md
agents/00000003-0000-0000-0000-000000000000/: anime_fan.md  cosplay_creator.md  retro_gamer.md
agents/00000004-0000-0000-0000-000000000000/: home_cook.md  river_fisher.md  rugby_fanatic.md
agents/00000005-0000-0000-0000-000000000000/: bush_walker.md  eco_warrior.md  study_buddy.md
agents/00000006-0000-0000-0000-000000000000/: bbq_master.md  car_enthusiast.md  diy_handyman.md
agents/00000007-0000-0000-0000-000000000000/: design_geek.md  markets_explorer.md  watercolour_artist.md
agents/00000008-0000-0000-0000-000000000000/: board_game_geek.md  code_monkey.md  developer_agent.md  rock_climber.md
agents/00000009-0000-0000-0000-000000000000/: bookworm.md  dog_mum.md  wellness_guide.md
agents/00000010-0000-0000-0000-000000000000/: street_photographer.md  travel_planner.md  weekend_surfer.md
agents/00000011-0000-0000-0000-000000000000/: marathon_runner.md  true_crime_buff.md  wine_enthusiast.md
agents/00000012-0000-0000-0000-000000000000/: latte_artist.md  skateboarder.md  street_art_fan.md
agents/00000013-0000-0000-0000-000000000000/: meditation_guide.md  vegan_chef.md  yoga_teacher.md
agents/00000014-0000-0000-0000-000000000000/: architecture_nerd.md  history_buff.md  jazz_wine.md
agents/00000015-0000-0000-0000-000000000000/: brunch_queen.md  content_creator.md  pilates_addict.md
agents/00000016-0000-0000-0000-000000000000/: 4wd_adventurer.md  camp_cook.md  tinny_fisher.md
agents/00000017-0000-0000-0000-000000000000/: fashion_forward.md  festival_lover.md  techno_dj.md
agents/00000018-0000-0000-0000-000000000000/: animal_whisperer.md  baker_extraordinaire.md  garden_guru.md
agents/00000019-0000-0000-0000-000000000000/: a_league_fan.md  fifa_gamer.md  tradie_life.md
agents/00000020-0000-0000-0000-000000000000/: interior_designer.md  property_expert.md  wine_cheese_host.md
agents/00000021-0000-0000-0000-000000000000/: indie_music_lover.md
agents/00000022-0000-0000-0000-000000000000/: city_pop_collector.md
agents/00000023-0000-0000-0000-000000000000/: jazz_lover.md
docs/: PROGRESS.md  islume-langfuse-setup.html
frontend/: .env.local.example  eslint.config.mjs  knip.json  next.config.ts  package-lock.json  package.json
migrations/: env.py
scripts/: check_infra.py  reset_redis_streams.py  run_bartering_e2e.py  run_orchestrator_e2e.py  run_orchestrator_e2e_ja.py  run_orchestrator_e2e_ko.py  run_orchestrator_fanout_e2e.py  run_plugins_e2e.py  seed_db.py  smoke_test_chat.py  solana_create_mint.py  start_all.sh  stop_all.sh  validate_agent_md.py
shared/: agent_md.py  config.py  crypto.py  db.py  llm.py  messages.py  models.py  notifications.py  redis_client.py  solana.py  telemetry.py
tests/: test_admin_adjust_schema.py  test_agent_md_i18n.py  test_agent_plugin_schemas.py  test_bartering_policy.py  test_crypto_tx_data.py  test_island_stage_schemas.py  test_llm_tool_normalization.py  test_new_plugins.py  test_partner_evaluation.py  test_plugin_registry.py  test_solana_address.py  test_solana_withdrawal.py  test_wallet_audit.py  test_wallet_idempotency.py  test_worker_empty_response_retry.py  test_worker_localized_persona.py
(+189 files in other folders)
