[project]
name = "islume"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.89.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
    "pynacl>=1.6.2",
    "pyyaml>=6.0.3",
    "solana==0.36.12",
    # solders is pulled in by solana, but we import it directly (Keypair, Pubkey,
    # Signature) so declare it. Pinned to the version solana==0.36.12 resolves.
    "solders==0.27.1",
    "opentelemetry-api>=1.27.0,<1.30.0",
    "opentelemetry-sdk>=1.27.0,<1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<1.30.0",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "vulture>=2.16",
]

[tool.uv]
# solana-py declares websockets<=15.0.1 (only for its rpc.websocket_api module,
# which we never import — we use the HTTP AsyncClient + spl.token only). The
# gateway needs websockets>=16.0 via uvicorn[standard]. Override keeps the
# battle-tested gateway dependency untouched and forces it onto solana-py.
override-dependencies = ["websockets>=16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: needs islume_test Postgres + Redis (set ISLUME_TEST_DATABASE_URL)",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle (ruff defaults), I: isort, UP: pyupgrade,
# B: flake8-bugbear, ASYNC: flake8-async (catches blocking calls in async code).
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# E501 (line length) is enforced by `ruff format`, not the linter.
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI injects dependencies via callables in argument defaults — not a B008 bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.vulture]
paths = ["shared", "services", "scripts"]
# 80 trims most FastAPI/Pydantic/SQLAlchemy false positives; lower to triage more.
min_confidence = 80
ignore_decorators = ["@app.*", "@router.*", "@*.websocket", "@*.on_event"]
# parent_context: required by the SpanProcessor.on_start override signature
# (the OTel SDK calls it by keyword); unused in our body but must keep its name.
# See shared/telemetry.py — do NOT rename it to silence vulture; that crashes
# the worker on every span start (docs/JOURNAL.md 2026-05-30).
ignore_names = ["parent_context"]

[tool.deptry]
# shared/ and services/ are first-party workspace packages, not PyPI deps.
known_first_party = ["shared", "services"]

[tool.deptry.per_rule_ignores]
# uvicorn: ASGI server, invoked via CLI (scripts/start_all.sh), never imported.
# websockets: WebSocket protocol implementation for uvicorn[standard] WS support.
# structlog: declared for planned structured logging, not yet wired into services.
DEP002 = ["uvicorn", "websockets", "structlog"]
